# autodrivelab

./: .gitattributes  .gitignore  README.md  README_DMS_test_demo.md  README_iqa_integration.md  README_model_inference.md  README_ros2_demo.md  pyproject.toml  requirements.txt
configs/: demo_nuscenes_mvp.yaml  demo_ros2.yaml
docs/: ROADMAP.md  bishe_project_architecture.md  ros2_rviz_3d_visualization.md
docs/protocol/: can_frame_mapping.md  protocol_boundary_statement.md
iqa_mobilenetv2_reproduce/: README.md  requirements.txt
iqa_mobilenetv2_reproduce/configs/: iqa_mobilenetv2.yaml
iqa_mobilenetv2_reproduce/docs/: experiment_summary.md  server_reproduction_status.md
iqa_mobilenetv2_reproduce/scripts/: check_dataset.py  common.py  evaluate_iqa.py  export_model.py  infer_samples.py  run_reproduction.sh  split_dataset.py  train_iqa.py  write_experiment_summary.py
legacy/: README.md
legacy/adas_prototype/: README.md  test.py
legacy/adas_prototype/src/: adas_pipeline.py  play_video.py  visualize_adas.py
legacy/dms_prototype/: README.md  Structure.md  config.yaml  core_perception.py  generate_mock_data.py  main.py  requirements.txt  visualizer.py
scripts/: run_yolo_depth_demo.sh
src/arbiter_can/: package.xml  setup.cfg  setup.py
src/arbiter_can/arbiter_can/: arbiter_can_node.py  can_encoder.py
src/arbiter_can/test/: test_can_encoder.py
src/arbitration_module/: README.md  package.xml  setup.cfg  setup.py
src/arbitration_module/arbitration_module/: __init__.py  arbitration_node.py  constants.py  event_builder.py  iqa_gate.py  risk_matrix.py  time_sync_buffer.py  utils.py
src/arbitration_module/config/: arbitration_config.yaml
src/arbitration_module/launch/: arbitration_node.launch.py
src/arbitration_module/resource/: arbitration_module
src/arbitration_module/test/: test_arbitration_logic.py
src/autodrivelab_msgs/: CMakeLists.txt  package.xml
src/autodrivelab_msgs/msg/: AdasStatus.msg  AlertCommand.msg  BevObject.msg  BevObjects.msg  CameraQuality.msg  CanFrame.msg  DmsStatus.msg  DriverState.msg  EgoState.msg  FusionEvent.msg  FusionRiskStatus.msg  IqaStatus.msg  NuscenesFrame.msg  Object2DOrBEV.msg  ObjectList.msg  RiskMetrics.msg  SourceStatus.msg
src/autodrivelab_visualization/: README.md  package.xml  setup.cfg  setup.py
src/autodrivelab_visualization/autodrivelab_visualization/: asset_registry.py  bev_marker_node.py  marker_utils.py  test_bev_objects_publisher.py
src/autodrivelab_visualization/launch/: rviz_3d_markers.launch.py
src/autodrivelab_visualization/rviz/: autodrivelab_3d_markers.rviz
src/bev_perception/: package.xml  setup.cfg  setup.py
src/bev_perception/bev_perception/: bev_perception_node.py
src/data_loop/: package.xml  setup.cfg  setup.py
src/data_loop/data_loop/: data_loop_node.py
src/demo_bringup/: package.xml  setup.cfg  setup.py
src/demo_bringup/config/: demo.yaml
src/demo_bringup/launch/: autodrivelab_demo.launch.py  autodrivelab_rviz_3d_demo.launch.py
src/demo_pipeline/: package.xml  setup.cfg  setup.py
src/demo_pipeline/demo_pipeline/: __init__.py  adas_gt_adapter_node.py  common.py  dms_scripted_node.py  fusion_to_autodrivelab_bridge_node.py  iqa_adapter_node.py  nuscenes_replay_node.py  render_recorder_node.py
src/demo_pipeline/launch/: demo_ros2.launch.py
src/dms_module/: README.md  package.xml  setup.cfg  setup.py
src/dms_module/config/: dms_config.yaml
src/dms_module/dms_module/: __init__.py  core_perception.py  dms_node.py  event_mapper.py  face_analyzer.py  object_detector.py  temporal_filter.py  utils.py  visualizer.py
src/dms_module/launch/: dms_node.launch.py
src/dms_module/resource/: dms_module
src/dms_monitor/: package.xml  setup.cfg  setup.py
src/hmi_interface/: package.xml  setup.py
src/iqa_monitor/: package.xml  setup.cfg  setup.py
src/motion_prediction/: package.xml  setup.cfg  setup.py
src/signal_gateway/: package.xml  setup.cfg  setup.py
tools/: build_iqa_timeline_from_test.py  export_iqa_test_results.py  export_nuscenes_demo_cache.py  generate_adas_from_gt.py  generate_scripted_dms.py  generate_scripted_iqa.py  render_demo_video.py  render_final_demo.py  run_demo_pipeline.py  run_dms_test_demo.py  run_offline_arbitration.py  test_motion_prediction_core.py  test_ttc_gated_adas_logic.py  write_iqa_test_report.py
tools/demo/: __init__.py  bev_render.py  offline_mvp.py
tools/model_inference/: run_yolo_depth_demo_pipeline.py
(+7 files in other folders)
