<?xml version="1.0"?>
<package format="3">
  <name>autodrivelab_msgs</name>
  <version>0.1.0</version>
  <description>Shared ROS2 messages for AutoDriveLab.</description>
  <maintainer email="ron@example.com">ron</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
