<?xml version="1.0"?>
<package format="3">
  <name>autodrivelab_visualization</name>
  <version>0.1.0</version>
  <description>RViz2 MarkerArray visualization for AutoDriveLab BEV objects.</description>
  <maintainer email="ron@example.com">ron</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>autodrivelab_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
