<?xml version="1.0"?>
<package format="3">
  <name>data_loop</name>
  <version>0.1.0</version>
  <description>Shadow-mode data loop and edge-case logging.</description>
  <maintainer email="ron@example.com">ron</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>autodrivelab_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
