<?xml version="1.0"?>
<package format="3">
  <name>demo_bringup</name>
  <version>0.1.0</version>
  <description>Launch package for AutoDriveLab demo.</description>
  <maintainer email="ron@example.com">ron</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
