<?xml version="1.0"?>
<package format="3">
  <name>demo_pipeline</name>
  <version>0.1.0</version>
  <description>ROS2 adapters for the nuScenes offline demo pipeline.</description>
  <maintainer email="ron@example.com">ron</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>autodrivelab_msgs</depend>
  <depend>arbiter_can</depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
